Make changes in header and fix alignment

--- a/src/components/header/CheckoutPageHeader.css
+++ b/src/components/header/CheckoutPageHeader.css
@@ -14,6 +14,16 @@
   z-index: 1000;
 }
 
+.logo-image {
+  height: 35px;
+  margin-left: 10px;
+}
+.logo-style{
+  display: flex;
+  align-items: center;
+
+}
+
 .checkout-header .header-content {
   width: 100%;
   max-width: 1100px;
@@ -53,7 +63,14 @@
     height: 26px;
   }
 }
+.logo-text {
+  color: rgb(25, 135, 84);
+  margin: 0;
+}
+.header-logo-decoration{
+  text-decoration: none;
 
+}
 .checkout-header .checkout-header-middle-section {
   flex: 1;
   flex-shrink: 0;
